--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -848,6 +848,10 @@ video {
   margin-left: 0.25rem;
 }
 
+.ml-10 {
+  margin-left: 2.5rem;
+}
+
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -908,12 +912,8 @@ video {
   margin-top: 1px;
 }
 
-.ml-10 {
-  margin-left: 2.5rem;
-}
-
-.mr-1 {
-  margin-right: 0.25rem;
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .box-border {
@@ -1286,10 +1286,6 @@ video {
   flex: none;
 }
 
-.flex-\[5\] {
-  flex: 5;
-}
-
 .flex-shrink-0 {
   flex-shrink: 0;
 }
@@ -1453,10 +1449,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-around {
-  justify-content: space-around;
 }
 
 .gap-1 {
@@ -1669,10 +1661,6 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
 }
 
 .rounded-l-full {
